[metadata]
name = pytest-vnc
version = 1.0.0
author = Barney Gale
description = VNC client for Pytest
long_description = file: README.rst
url = https://github.com/barneygale/pytest-vnc
license = GPL

[options]
py_modules = pytest_vnc
python_requires = >= 3.7
install_requires =
    cryptography
    keysymdef
    pytest
    numpy

[options.entry_points]
pytest11 =
    pytest-vnc = pytest_vnc
